--- a/Program/Spork/Cargo.toml
+++ b/Program/Spork/Cargo.toml
@@ -14,4 +14,4 @@ urlencoding = "2.1.2"
 pancurses = "0.17.0"
 phf = { version = "0.11", default-features = false, features = ["macros"]}
 ctrlc = "3.2.3"
-iced = "0.4"
+iced = {version = "0.4", features = ["image"]}
